Bug 1634720 : Add HelperThreadPoolShutdownObserver to shut down HelperThreadPool. r=KrisWright

When nsThreadManager shuts down, it will shutdown all the threads,
including the main thread of HelperThreadPool.

However the main thread of HelperThreadPool has been waiting.
https://searchfox.org/mozilla-central/rev/446160560bf32ebf4cb7c4e25d7386ee22667255/xpcom/threads/nsThreadPool.cpp#277

and nsThreadManager will have to wait until HelperThreadPool wakes up to
shutdown the main thread of HelperThreadPool.

Adding a HelperThreadPoolShutdownObserver to observe the
xpcom-shutdown-threads notification, and shut down HelperThreadPool
accordingly.

Differential Revision: https://phabricator.services.mozilla.com/D74735