js/xpconnect/src/XPCJSRuntime.cpp
@@ -1082,10 +1082,6 @@ void XPCJSRuntime::Shutdown(JSContext* cx) {
 
   nsScriptSecurityManager::ClearJSCallbacks(cx);
 
-  // Shut down the helper threads
-  gHelperThreads->Shutdown();
-  gHelperThreads = nullptr;
-
   // Clean up and destroy maps. Any remaining entries in mWrappedJSMap will be
   // cleaned up by the weak pointer callbacks.
   mIID2NativeInterfaceMap = nullptr;
@@ -2967,6 +2963,29 @@ void ConstructUbiNode(void* storage, JSObject* ptr) {
   JS::ubi::ReflectorNode::construct(storage, ptr);
 }
 
+class HelperThreadPoolShutdownObserver : public nsIObserver {
+ public:
+  NS_DECL_ISUPPORTS
+  NS_DECL_NSIOBSERVER
+ protected:
+  virtual ~HelperThreadPoolShutdownObserver() = default;
+};
+
+NS_IMPL_ISUPPORTS(HelperThreadPoolShutdownObserver, nsIObserver, nsISupports)
+
+NS_IMETHODIMP
+HelperThreadPoolShutdownObserver::Observe(nsISupports* aSubject,
+                                          const char* aTopic,
+                                          const char16_t* aData) {
+  MOZ_RELEASE_ASSERT(!strcmp(aTopic, "xpcom-shutdown-threads"));
+
+  // Shut down the helper threads
+  gHelperThreads->Shutdown();
+  gHelperThreads = nullptr;
+
+  return NS_OK;
+}
+
 void XPCJSRuntime::Initialize(JSContext* cx) {
   mUnprivilegedJunkScope.init(cx, nullptr);
   mLoaderGlobal.init(cx, nullptr);
@@ -3013,6 +3032,9 @@ void XPCJSRuntime::Initialize(JSContext* cx) {
 
   // Initialize a helper thread pool for JS offthread tasks. Set the
   // task callback to divert tasks to the helperthreads.
+  nsCOMPtr<nsIObserverService> obsService = services::GetObserverService();
+  nsCOMPtr<nsIObserver> obs = new HelperThreadPoolShutdownObserver();
+  obsService->AddObserver(obs, "xpcom-shutdown-threads", false);
   InitializeHelperThreadPool();
   SetHelperThreadTaskCallback(&DispatchOffThreadTask);
 
